# todo-rust

./: .env  Cargo.toml
docs/: tasks_2025-11-09.md
src/: main.rs
src/api/: auth_api.rs  mod.rs  task.rs  task_api.rs  user_api.rs  users.rs  users_api.rs
src/db/: mongo.rs  mongo_connector.rs
src/dto/: auth.rs  mod.rs  user.rs  user_response.rs  users.rs
src/models/: auth.rs  task.rs  user.rs  user_model.rs
src/repository/: mod.rs  task_repository.rs  traits.rs  user_repository.rs
src/repository/traits/: mod.rs
src/services/: auth_service.rs  mod.rs  user_service.rs
test/: simple_endpoint.http
