[package]
name = "todo_rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
derive_more = "2.0.1"
env_logger = "0.11.8"
log = "0.4.28"
serde = "1.0.228"
strum = "0.27.2"
strum_macros = "0.27.2"
uuid = "1.18.1"
anyhow = "1.0.75"
async-trait = "0.1.74"
futures = "0.3"
mongodb = "3.3.0"
bcrypt = "0.17.1"
validator = "0.20.0"
dotenvy = "0.15.7"
